--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="app_name">Sudoku</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="menu_new_game">New Game</string>
+    <string name="menu_medium">New Game Medium</string>
     <string name="settings">Settings</string>
-    <string name="menu_continue">Continue</string>
+    <string name="menu_simple">New Game Simple</string>
+    <string name="menu_hard">New Game Hard</string>
     <string name="title_activity_sudoku">SudokuActivity</string>
 
 </resources>
